@@ -16,5 +16,7 @@ echo "Done\n";
 ?>
 --EXPECTF--
 *** Testing for object ***
+
+Strict Standards: Only variables should be passed by reference in %sextract_variation9.php on line 10
 int(1)
 Done
